Revision history for Dist-Zilla-PluginBundle-Author-ETHER

{{$NEXT}}
          - amended CONTRIBUTING file to clarify that the Changes file should
            be edited in a pull request, and all tests should pass.

0.146     2019-02-16 20:32:06Z
          - add .gitattributes file to minting profile, to tell github that
            this is perl code, not raku

0.145     2018-09-16 06:09:39Z
          - bump prereqs for [MakeMaker::Awesome] and [MakeMaker::Fallback] to
            ensure we get fixed plugin method definitions

0.144     2018-09-16 00:31:37Z
          - add paragraph on Travis CI in generated CONTRIBUTING file

0.143     2018-07-08 03:46:21Z
          - allow the document to provide its own AUTHOR pod section,
            overriding what we would normally weave into the document

0.142     2018-07-01 22:40:53Z
          - always report installed version of Module::Runtime in
            t/00-report-prereqs.t, as recent versions are incompatible with
            older Moose.
          - always report installed version of File::Temp

0.141     2018-05-21 19:12:49Z
          - still more fixes to $TODO in xt/author/changes_has_content.t

0.140     2018-05-16 04:30:10Z
          - and even more fixes to $TODO in xt/author/changes_has_content.t
          - bump minimum required version of [@Git::VersionManager] to avoid
            test failures

0.139     2018-05-15 05:56:41Z
          - yet more fixes to $TODO in xt/author/changes_has_content.t

0.138     2018-05-15 04:07:46Z
          - updated travis configs (in this distribution, and minting profile)
            to reflect the new latest Dist::Zilla version in the 5.x series
          - further fixes to $TODO in xt/author/changes_has_content.t

0.137     2018-04-01 22:55:32Z
          - fixed $TODO in xt/author/changes_has_content.t

0.136     2018-03-22 04:19:40Z
          - add new xt/author/changes_has_content.t that calls
            xt/release/changes_has_content.t if not on master branch (for