@@ -3,6 +3,7 @@ Revision history for Dist-Zilla-PluginBundle-Author-ETHER
 {{$NEXT}}
           - amended CONTRIBUTING file to clarify that the Changes file should
             be edited in a pull request, and all tests should pass.
+          - new 'cpanfile' option, for adding a cpanfile to the distribution
 
 0.146     2019-02-16 20:32:06Z
           - add .gitattributes file to minting profile, to tell github that
